# x11-ecs-invaders

./: CMakeLists.txt  README.md
include/: alien_sprite.h  factory.h  x11_wrapper.h
src/: ecs.c  ecs.h  factory.c  factory.h  main.c  x11_wrapper.c  x11_wrapper.h
